<resources>
    <string name="app_name">計算機</string>
    <string name="calc_0">0</string>
    <string name="calc_1">1</string>
    <string name="calc_2">2</string>
    <string name="calc_3">3</string>
    <string name="calc_4">4</string>
    <string name="calc_5">5</string>
    <string name="calc_6">6</string>
    <string name="calc_7">7</string>
    <string name="calc_8">8</string>
    <string name="calc_9">9</string>
    <string name="plus">+</string>
    <string name="subtraction">-</string>
    <string name="multiple">×</string>
    <string name="division">÷</string>
    <string name="equal">=</string>
    <string name="plusMinus">+/-</string>
    <string name="percent">%</string>
    <string name="clear">AC</string>

    <string name="msg_overflow_error">計算結果がオーバーフローしました。\n計算結果には 0 を表示していますが、AC ボタンをタップしてクリアしてください。</string>
    <string name="msg_zero_divide_error">ゼロ除算につき計算不能です。\n計算結果には 0 を表示していますが、AC ボタンをタップしてクリアしてください。</string>
</resources>
