<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:gravity="right|bottom"
        android:maxLines="1"
        android:text="0"
        android:paddingRight="36dp"
        android:textColor="@color/numberColor"
        android:textSize="60dp"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <!-- Dummy Button for table layout. -->
            <Button
                android:id="@+id/btn_ac"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/button_round"
                android:text="@string/clear"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btn_changeSymbol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"

                android:background="@drawable/button_round"
                android:text="@string/plusMinus"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btn_percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"

                android:background="@drawable/button_round"
                android:text="@string/percent"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btn_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/calculation_button_round"
                android:text="@string/division"
                android:textColor="@color/numberColor"
                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/number_button_round"
                android:text="@string/calc_7"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/number_button_round"
                android:text="@string/calc_8"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/number_button_round"
                android:text="@string/calc_9"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />

            <Button
                android:id="@+id/btn_multiple"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/calculation_button_round"
                android:text="@string/multiple"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/number_button_round"
                android:text="@string/calc_4"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/number_button_round"
                android:text="@string/calc_5"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/number_button_round"
                android:text="@string/calc_6"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />

            <Button
                android:id="@+id/btn_subtraction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/calculation_button_round"
                android:text="@string/subtraction"
                android:textColor="@color/numberColor"


                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/number_button_round"
                android:text="@string/calc_1"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/number_button_round"
                android:text="@string/calc_2"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/number_button_round"
                android:text="@string/calc_3"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.25"
                android:background="@drawable/calculation_button_round"
                android:text="@string/plus"
                android:textColor="@color/numberColor"


                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">


            <Button
                android:id="@+id/btn0"
                android:layout_width="19dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/number_button_round"
                android:text="@string/calc_0"
                android:textColor="@color/numberColor"
                android:textSize="25dp" />


            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.5"
                android:background="@drawable/calculation_button_round"
                android:text="@string/equal"
                android:textColor="@color/numberColor"

                android:textSize="25dp" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>